# QuadrisGame

./: .gitignore  CMakeLists.txt  Makefile  block.cc  block.h  cell.cc  cell.h  cinterpreter.h  clearrow.in  command.h  constants.h  display.cc  display.h  interpreter.cc  interpreter.h  level.cc  level.h  main.cc  newSequence.txt  observer.h  quadris  quadrisboard.cc  quadrisboard.h  sequence.txt  subject.cc  subject.h  window.cc  window.h
BlockClasses/: Iblock.cc  Iblock.h  Jblock.cc  Jblock.h  Lblock.h  Oblock.h  SBlock.h  Sblock.h  Tblock.h  Zblock.h  iblock.h  jblock.cc  lblock.h  oblock.h  zblock.cc
